--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #4ba0c1; }
+  background: #af50b0; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #8bc4dd; }
+  background: #a0b548; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e5fec8; }
+  background: #848d07; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #15ed4c; }
+  background: #5f5122; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9b9126; }
+  background: #b76484; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c70334; }
+  background: #312a65; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #4a5882; }
+  background: #c20f22; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #2e0d91; }
+  background: #dc9b43; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #ce2424; }
+  background: #b39d53; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #207367; }
+  background: #5ec493; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f49d61; }
+  background: #9f9d34; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f783fa; }
+  background: #fc96da; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #5a8ff8; }
+  background: #8572a1; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #71439e; }
+  background: #5aec0f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #21155e; }
+  background: #a25b77; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #9b5982; }
+  background: #53ab81; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b060be; }
+  background: #c3e9ba; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #e5bf25; }
+  background: #0a94cd; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d65515; }
+  background: #3217f5; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #34240e; }
+  background: #cb6940; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2d2f63; }
+  background: #af81d9; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #bbf2bb; }
+  background: #e9c023; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #cf51b2; }
+  background: #f89d82; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d5519c; }
+  background: #6a313a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #fb3fbf; }
+  background: #6dcda2; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #a3151f; }
+  background: #975ef9; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a0a3d1; }
+  background: #27986b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #c52cbd; }
+  background: #d87a2d; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9b259b; }
+  background: #119556; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #392acc; }
+  background: #29212b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #8ac92e; }
+  background: #a9b810; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #83e4d2; }
+  background: #2b6425; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3a2636; }
+  background: #fcc4fe; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #754e0e; }
+  background: #6557a4; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #dfe7c0; }
+  background: #eb0b2c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f50dae; }
+  background: #5c4afb; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #0b9a6f; }
+  background: #8b9a3c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #1c8a37; }
+  background: #c1ae9b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #d1185d; }
+  background: #621039; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #6c67a1; }
+  background: #c8edf1; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #0eca1e; }
+  background: #9b7bf3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ce8783; }
+  background: #fa82c3; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #3a4653; }
+  background: #1e6b86; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5b3945; }
+  background: #c34ac3; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1e05a7; }
+  background: #f5986a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #404912; }
+  background: #e0ed16; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #a574bc; }
+  background: #64535d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #272ac7; }
+  background: #573028; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #acdff5; }
+  background: #f8184c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #7b08ff; }
+  background: #1665f6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #bc6462; }
+  background: #962e03; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #a6050e; }
+  background: #7de371; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #bca51e; }
+  background: #42161f; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a0129e; }
+  background: #3a2a31; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e88247; }
+  background: #7169bb; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #22231c; }
+  background: #120a0d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c1f9ef; }
+  background: #8ffa54; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cfb993; }
+  background: #7e92c5; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4d9fcd; }
+  background: #fa6ce7; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c8491d; }
+  background: #ca8047; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #d57453; }
+  background: #22b327; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #7e96bc; }
+  background: #671a61; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #2db122; }
+  background: #16e167; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3f7f1d; }
+  background: #4b8515; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #0daa72; }
+  background: #710f3d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #3f5825; }
+  background: #3001bf; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e9a9d8; }
+  background: #5a456b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0f735d; }
+  background: #e9a997; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c44440; }
+  background: #a7581b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #a4b553; }
+  background: #cea012; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #55c03b; }
+  background: #627ce7; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4726ce; }
+  background: #f5a8c2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b38f14; }
+  background: #f64835; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #fe3456; }
+  background: #69c0ff; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a96dd9; }
+  background: #7e96df; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #ffe350; }
+  background: #b16afe; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1b1271; }
+  background: #245ad8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #556d6d; }
+  background: #375480; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1f6488; }
+  background: #e2e22b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #6195df; }
+  background: #56cf70; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f6abad; }
+  background: #016ddc; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1d60d4; }
+  background: #a58df9; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ab1be2; }
+  background: #c5fd09; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #3b9c16; }
+  background: #385d26; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #0f475e; }
+  background: #9ca0d8; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #9615be; }
+  background: #cfc5d6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2b3ad0; }
+  background: #96cc41; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0fbb35; }
+  background: #0ce98e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a4ce21; }
+  background: #67c8a7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d660e7; }
+  background: #cb7516; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b18b14; }
+  background: #6b86b2; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #51eff3; }
+  background: #1b0fce; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #8bd309; }
+  background: #8ab762; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ac85be; }
+  background: #ee1e2d; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5ff331; }
+  background: #62119b; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #bd9dcd; }
+  background: #c7fb78; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b1a53b; }
+  background: #de70d7; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ec3686; }
+  background: #82dc41; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #7a2b60; }
+  background: #0a99a9; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #360bc9; }
+  background: #238c5f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -8954,15 +8954,13 @@ th {
 
 .dropdown-with-img:after {
   content: "";
-  width: 0;
-  height: 0;
+  width: 15px;
+  height: 12px;
   position: absolute;
-  right: 10px;
-  top: 50%;
-  margin-top: -3px;
-  border-width: 5px 5px 0 5px;
-  border-style: solid;
-  border-color: #a4a4a4 transparent; }
+  right: 4px;
+  top: 37%;
+  background: url("../images/down-arrow.svg") no-repeat;
+  display: inline-block; }
 
 .dropdown-with-img .dropdown {
   /* Size & position */
@@ -10969,6 +10967,94 @@ table .bold-heading {
   .standard-table table .table-cell-div {
     position: relative;
     top: -3px; }
+.standard-table .table-sources {
+  background: #bbbbbb;
+  text-align: center;
+  color: white;
+  border-radius: 100%;
+  height: 24px;
+  width: 24px;
+  display: table;
+  vertical-align: middle;
+  margin: auto;
+  font-size: 16px;
+  line-height: 25px; }
+.standard-table .table-text-divider {
+  position: relative;
+  margin-right: 20px; }
+  .standard-table .table-text-divider::after {
+    height: 18px;
+    background: #bbbbbb;
+    width: 1px;
+    content: "";
+    position: absolute;
+    right: -12px;
+    top: -2px; }
+.standard-table .hover-box-along-with-data {
+  background: #F6F6F6;
+  text-align: center;
+  color: white;
+  border-radius: 100%;
+  height: 24px;
+  width: 24px;
+  display: inline-block;
+  vertical-align: middle;
+  margin: auto;
+  line-height: 0px;
+  margin-left: 10px; }
+  .standard-table .hover-box-along-with-data .box-dots-container {
+    color: #9a9a9a;
+    line-height: 10px;
+    position: relative;
+    top: 5px; }
+  .standard-table .hover-box-along-with-data .dots-grid {
+    line-height: 0px;
+    position: relative; }
+.standard-table .data-row-heading {
+  color: black;
+  font-size: 20px;
+  padding: 10px;
+  margin-left: 52px;
+  padding-top: 10px;
+  padding-bottom: 3px;
+  line-height: 20px; }
+.standard-table .table-hover-content-parent {
+  cursor: pointer; }
+  .standard-table .table-hover-content-parent .show-table-div-on-hover {
+    display: none; }
+    .standard-table .table-hover-content-parent .show-table-div-on-hover .data-row {
+      width: 100%;
+      border-bottom: 1px solid #ecedf2;
+      background: #f6f6f6; }
+    .standard-table .table-hover-content-parent .show-table-div-on-hover .table-hover-content-box {
+      display: grid;
+      grid-template-columns: auto auto;
+      grid-gap: 10px;
+      padding: 5px 20px;
+      align-items: center;
+      color: #000;
+      text-decoration: none; }
+      .standard-table .table-hover-content-parent .show-table-div-on-hover .table-hover-content-box :last-child {
+        border-bottom: 0px; }
+      .standard-table .table-hover-content-parent .show-table-div-on-hover .table-hover-content-box .img-box {
+        background: white;
+        border: 1px solid #e2e2e2;
+        padding: 5px;
+        border-radius: 100%; }
+        .standard-table .table-hover-content-parent .show-table-div-on-hover .table-hover-content-box .img-box img {
+          display: grid;
+          width: 20px;
+          position: relative;
+          top: -2px; }
+  .standard-table .table-hover-content-parent:hover .show-table-div-on-hover {
+    display: block;
+    position: absolute;
+    background: #F6F6F6;
+    border: 1px solid #c4c4c4;
+    text-align: left;
+    max-height: 297px;
+    overflow-y: scroll;
+    z-index: 1; }
 .standard-table tbody {
   background: white; }
 .standard-table table thead {
@@ -10984,7 +11070,7 @@ table .bold-heading {
       margin: 0px 3px; }
   .standard-table table thead td {
     font-size: 14px !important;
-    color: #4C4C4C;
+    color: #4c4c4c;
     border-top: 1px solid #ecedf2; }
 .standard-table .td-center {
   text-align: center;
@@ -11006,7 +11092,7 @@ table .bold-heading {
 
 .table td {
   font-size: 14px !important;
-  color: #4C4C4C !important; }
+  color: #4c4c4c !important; }
 
 @font-face {
   font-family: 'proxima-semi-bold';
@@ -13930,7 +14016,7 @@ input:checked + .sliders:before {
   -moz-appearance: none;
   appearance: none;
   /* Remove default arrow */
-  background-image: url(../images/select-dropdwon-icon.png);
+  background-image: url(../images/down-arrow.svg);
   background-repeat: no-repeat;
   background-position-x: 97%;
   background-position-y: 13px;
@@ -13990,7 +14076,7 @@ input:checked + .sliders:before {
   display: none; }
 
 .list-ic .active {
-  background: dodgerblue; }
+  background: #fff; }
 
 .list-ic .active ~ li {
   background: lightblue; }
@@ -14262,6 +14348,9 @@ input:checked + .sliders-Not .not-blue-bg {
 
 /*--------- END --------*/
 /* Rounded sliders */
+.custom-select-arrow {
+  background-position-x: 94% !important; }
+
 .sliders-Not.round {
   border-radius: 34px; }
 
@@ -15017,7 +15106,7 @@ table .parent-row,
 
 .list-view-hover-wrapper {
   background: #fff;
-  padding: 20px;
+  padding: 25px;
   border: 1px solid #c4c4c4; }
   .list-view-hover-wrapper .content-wrapper {
     display: flex;
@@ -15204,7 +15293,10 @@ li:hover {
   transition: all 300ms; }
 
 .tab-content-small {
-  width: 45vw !important; }
+  width: 35vw !important; }
+
+.tab-content-small-query-builder {
+  width: 85vw !important; }
 
 .slid-screen-wrapper .sliding-left-section {
   display: block;
@@ -15233,6 +15325,8 @@ li:hover {
   z-index: 3;
   height: 100%;
   background: white; }
+.slid-screen-wrapper .tab-content-small-query-builder {
+  width: 76.5vw !important; }
 
 .device-list-main-top {
   display: flex; }
