--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1659,15 +1659,17 @@ th {
 
 .dropdown-with-img:after {
  content: "";
- width: 0;
- height: 0;
+ width: 15px;
+ height: 12px;
  position: absolute;
- right: 10px;
- top: 50%;
- margin-top: -3px;
- border-width: 5px 5px 0 5px;
- border-style: solid;
- border-color: #a4a4a4 transparent;
+ right: 4px;
+ top: 37%;
+ background: url("../images/down-arrow.svg") no-repeat;
+display: inline-block;
+//  margin-top: -3px;
+//  border-width: 5px 5px 0 5px;
+//  border-style: solid;
+//  border-color: #a4a4a4 transparent;
 }
 
 .dropdown-with-img .dropdown {
@@ -4336,6 +4338,91 @@ height: 250px;
 
 // Talha Standard Table
 
+// .standard-table {
+//   .bold-heading {
+//    font-weight: normal;
+//    color: #4c4c4c;
+//    font-size: 16px;
+//    background: none;
+//   }
+ 
+//   .stripe tr:nth-of-type(odd) {
+//    background: #fafafa;
+//   }
+ 
+//   table {
+//    white-space: nowrap;
+//    width: 100%;
+//    border: 0px;
+ 
+//    input {
+//     margin: 0px 4px;
+//    }
+ 
+//    .table-cell-div {
+//     position: relative;
+//     top: -3px;
+//    }
+//   }
+ 
+//   tbody {
+//    background: white;
+//   }
+//   table thead {
+//    background: none;
+ 
+//    th {
+//     font-weight: 600;
+//     font-size: 16px;
+//     color: #4c4c4c;
+//     border: 0px;
+ 
+//     input {
+//      margin-left: 0px;
+//     }
+//     a {
+//      margin: 0px 3px;
+//     }
+//    }
+ 
+//    td {
+//     font-size: 14px !important;
+//     color: #4C4C4C;
+//     border-top: 1px solid #ecedf2;
+//    }
+//   }
+ 
+//   .td-center {
+//    text-align: center;
+//    vertical-align: middle;
+ 
+//    a {
+//     margin: 0px 5px;
+//     img {
+//       width: 20px;
+//     }
+//    }
+//   }
+//  }
+//  .standard-table .td-center img {
+//   width: 18px;
+// }
+// .standard-table .td-center a {
+//   margin: 0px 10px;
+// }
+//  .standard-table-scroll {
+//    overflow-y: hidden;
+//    height: 290px;
+//  }
+//  .table td {
+//    font-size: 14px !important;
+//    color: #4C4C4C !important;
+//  }
+
+
+
+// Talha Standard Table
+
 .standard-table {
   .bold-heading {
    font-weight: normal;
@@ -4363,6 +4450,140 @@ height: 250px;
    }
   }
  
+  .table-sources {
+   background: #bbbbbb;
+   text-align: center;
+   color: white;
+   border-radius: 100%;
+   height: 24px;
+   width: 24px;
+   display: table;
+   vertical-align: middle;
+   margin: auto;
+   font-size: 16px;
+   line-height: 25px;
+  }
+ 
+  .table-text-divider {
+   position: relative;
+   margin-right: 20px;
+ 
+   &::after {
+    height: 18px;
+    background: #bbbbbb;
+    width: 1px;
+    content: "";
+    position: absolute;
+    right: -12px;
+    top: -2px;
+   }
+  }
+ 
+  .hover-box-along-with-data {
+   background: #F6F6F6; 
+   text-align: center;
+   color: white;
+   border-radius: 100%;
+   height: 24px;
+   width: 24px;
+   display: inline-block;
+   vertical-align: middle;
+   margin: auto; 
+   line-height: 0px;
+   margin-left: 10px;
+ 
+   .box-dots-container {
+    color: #9a9a9a;
+    line-height: 10px;
+    position: relative;
+    top: 5px;
+   }
+ 
+   .dots-grid {
+    line-height: 0px;
+    position: relative;
+   }
+  }
+ 
+  .data-row-heading {
+   color: black;
+   font-size: 20px;
+   padding: 10px;
+   margin-left: 52px;
+   padding-top: 10px;
+   padding-bottom: 3px;
+   line-height: 20px;
+  }
+ 
+  .table-hover-content-parent {
+   cursor: pointer;
+   .show-table-div-on-hover {
+    display: none;
+ 
+    .data-row {
+     width: 100%;
+     border-bottom: 1px solid #ecedf2;
+     background: #f6f6f6;
+ 
+     &:hover {
+      // background: #bababa;
+     }
+    }
+ 
+    .data-row:nth-child(odd) {
+    //  background: #e2e2e2;
+ 
+     &:hover {
+      // background: #bababa;
+     }
+    }
+ 
+    .table-hover-content-box {
+     display: grid;
+     grid-template-columns: auto auto;
+     grid-gap: 10px;
+     padding: 5px 20px;
+     align-items: center;
+ 
+     // background: #ac5858;
+     color: #000;
+ 
+     text-decoration: none;
+ 
+     :last-child {
+      border-bottom: 0px;
+     }
+ 
+     .img-box {
+      background: white;
+      border: 1px solid #e2e2e2;
+      padding: 5px;
+      border-radius: 100%;
+ 
+      img {
+       display: grid;
+       width: 20px;
+       position: relative;
+       top: -2px;
+      }
+     }
+    }
+   }
+ 
+   &:hover {
+    .show-table-div-on-hover {
+     display: block;
+     position: absolute;
+     background: #F6F6F6;
+     border: 1px solid #c4c4c4;
+     text-align: left;
+     max-height: 297px;
+     overflow-y: scroll;
+     z-index: 1;
+    }
+   }
+  }
+ 
   tbody {
    background: white;
   }
@@ -4385,7 +4606,7 @@ height: 250px;
  
    td {
     font-size: 14px !important;
-    color: #4C4C4C;
+    color: #4c4c4c;
     border-top: 1px solid #ecedf2;
    }
   }
@@ -4397,22 +4618,22 @@ height: 250px;
    a {
     margin: 0px 5px;
     img {
-      width: 20px;
+     width: 20px;
     }
    }
   }
  }
  .standard-table .td-center img {
   width: 18px;
-}
-.standard-table .td-center a {
+ }
+ .standard-table .td-center a {
   margin: 0px 10px;
-}
+ }
  .standard-table-scroll {
-   overflow-y: hidden;
-   height: 290px;
+  overflow-y: hidden;
+  height: 290px;
  }
  .table td {
-   font-size: 14px !important;
-   color: #4C4C4C !important;
+  font-size: 14px !important;
+  color: #4c4c4c !important;
  }
